refactoring markup to avoid text covering the load button

--- a/css/combined.css
+++ b/css/combined.css
@@ -36,16 +36,19 @@ h4 {
 	/* margin-top: -100%; */
 }
 
-#play-gif-button {
+.button-element {
 	position: absolute;
-	/* margin-left: 50%; */
-	/* margin-top: 50%; */
 	left: 50%;
 	top: 50%;
-	margin-left: -24px;
+		margin-left: -24px;
 	margin-top: -43px;
+}
+#play-gif-button {
 	cursor: pointer;
 	display: none;
+	/*background-color: darkred;*/
+	height: 70px;
+	width: 60px;
 }
 
 /* from http://davidwalsh.name/css-triangles */
